Fix the margin of the line Chart's legend on mobile

--- a/UIComponents/dashboardBuilder/css/dashboard.less
+++ b/UIComponents/dashboardBuilder/css/dashboard.less
@@ -515,7 +515,7 @@ height: auto !important;
 	float: none;
     width: calc(100% - 30px);
     position: relative;
-    margin: 15px 30px 0;
+    margin: 30px 30px 20px;
     height: auto;
 }
 .gridster-mobile .graph.with-legend {position: relative;}
